# pianeer

./: .gitignore  Cargo.toml  Cross.toml  README.md  build-all.sh  setup.sh
.github/workflows/: release.yml
android/: Cargo.toml  build.rs
android/java/com/pianeer/app/: MidiHelper.java  MidiOpener.java  MidiQueue.java  TextInputOverlay.java  WindowHelper.java
android/kotlin/com/pianeer/app/: MidiOpener.kt  TextInputOverlay.kt  WindowHelper.kt
android/src/: amidi.rs  lib.rs
core/: Cargo.toml  build.rs
core/src/: audio_stream.rs  dispatch.rs  instruments.rs  kontakt.rs  lib.rs  loader.rs  midi_player.rs  midi_recorder.rs  organ.rs  sampler.rs  snapshot.rs  sys_stats.rs  types.rs  web.rs
core/src/parsers/: gig.rs  mod.rs  sfz.rs
core/src/web/: http.rs  mod.rs  template.rs  ws.rs  wt.rs
desktop/: Cargo.toml  build.rs
desktop/src/: audio.rs  discovery.rs  drm_ui.rs  gui.rs  haiku_audio.cpp  haiku_midi.cpp  haiku_term.rs  main.rs  midi.rs  terminal.rs  ui.rs
egui-app/: Cargo.toml
egui-app/src/: app.rs  backend.rs  lib.rs  remote_audio.rs  wasm_audio.rs
scripts/: android_release.sh
src/: audio.rs  gig.rs  instruments.rs  loader.rs  main.rs  midi.rs  midi_player.rs  organ.rs  region.rs  sampler.rs  sfz.rs  ui.rs  web.rs
tools/wav2flac/: Cargo.toml
tools/wav2flac/src/: main.rs
web-wasm/: Cargo.toml  Trunk.toml  index.html
web-wasm/src/: main.rs
