[package]
name = "pianeer-core"
version = "0.2.0"
edition = "2021"

[features]
web = ["dep:axum", "dep:tower-http", "dep:wtransport", "dep:tokio", "dep:qrcode", "dep:include_dir"]

[dependencies]
symphonia    = { version = "0.5", default-features = false, features = ["flac", "wav", "pcm"] }
crossbeam-channel = "0.5"
midly        = "0.5"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
ringbuf      = "0.3"
flate2       = "1"
axum         = { version = "0.7", features = ["ws"], optional = true }
tower-http   = { version = "0.5", features = ["fs"], optional = true }
wtransport   = { version = "0.7", features = ["self-signed"], optional = true }
tokio        = { version = "1", features = ["full"], optional = true }
qrcode       = { version = "0.14", optional = true }
include_dir  = { version = "0.7", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
