[package]
name = "pianeer"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "pianeer"
path = "src/main.rs"

[features]
native-ui = ["dep:eframe", "dep:pianeer-egui"]

[dependencies]
pianeer-core      = { path = "../core" }
eframe            = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow"] }
pianeer-egui      = { path = "../egui-app", optional = true }
crossbeam-channel = "0.5"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
qrcode            = "0.14"
ringbuf           = "0.3"
flate2            = "1"

# crossterm/tokio/wtransport/quinn all depend on mio, which uses
# Linux-only socket APIs not present on Haiku.  Enable them only on
# non-Haiku; the Haiku terminal path uses libc directly (haiku_term.rs).
[target.'cfg(not(target_os = "haiku"))'.dependencies]
pianeer-core      = { path = "../core", features = ["web"] }
crossterm         = "0.27"
tokio             = { version = "1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
jack  = "0.13"
midir = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
cpal  = "0.15"
midir = "0.9"

[target.'cfg(target_os = "haiku")'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
