[package]
name = "pianeer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pianeer"
path = "src/main.rs"

[[bin]]
name = "wav2flac"
path = "src/wav2flac.rs"

[features]
native-ui = ["dep:eframe", "dep:pianeer-egui"]

[dependencies]
pianeer-core      = { path = "../core", features = ["web"] }
eframe            = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow"] }
pianeer-egui      = { path = "../egui-app", optional = true }
crossbeam-channel = "0.5"
crossterm         = "0.27"
midir             = "0.9"
tokio             = { version = "1", features = ["full"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
qrcode            = "0.14"
ringbuf           = "0.3"
hound             = "3"
flacenc           = "0.4"
flate2            = "1"
rayon             = "1"

[target.'cfg(target_os = "linux")'.dependencies]
jack = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
cpal = "0.15"
libc = "0.2"
