[package]
name = "pianeer"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "pianeer"
path = "src/main.rs"

[features]
# native-ui: eframe/egui window (Wayland/X11).  Default on all platforms.
# kms: DRM/KMS software-rendered egui for Linux without a display server.
#      Always included in the default build so the binary auto-selects it.
default = ["native-ui", "kms"]
native-ui = ["dep:eframe", "dep:pianeer-egui"]
kms       = ["dep:pianeer-egui", "dep:egui"]

[dependencies]
pianeer-core      = { path = "../core", features = ["web"] }
eframe            = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow"] }
pianeer-egui      = { path = "../egui-app", optional = true }
egui              = { version = "0.29", optional = true }
crossbeam-channel = "0.5"
crossterm         = "0.27"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
qrcode            = "0.14"
ringbuf           = "0.3"
flate2            = "1"
tokio             = { version = "1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
jack  = "0.13"
midir = "0.9"
# Always compiled on Linux; used by the kms code path (drm_ui.rs).
drm   = "0.14"
evdev = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
cpal  = "0.15"
midir = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
cpal  = "0.15"
midir = "0.9"
