[package]
name = "pianeer-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
pianeer-core      = { path = "../core" }
egui              = "0.29"
eframe            = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
ewebsock          = "0.7"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
crossbeam-channel = "0.5"
qrcode            = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
web-sys              = { version = "0.3", features = [
    "console",
    "Window", "Response",
    "ReadableStream", "ReadableStreamDefaultReader",
    "WritableStream", "WritableStreamDefaultWriter",
    "WebTransport", "WebTransportOptions",
    "WebTransportBidirectionalStream",
] }
