[package]
name = "pianeer-wasm"
version = "0.2.0"
edition = "2021"

[dependencies]
pianeer-egui           = { path = "../egui-app" }
eframe                 = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
wasm-bindgen           = "0.2"
wasm-bindgen-futures   = "0.4"
web-sys                = { version = "0.3", features = ["Window", "Location", "Document", "HtmlCanvasElement"] }
